# LLAMA_RLHF

./: .gitignore  DPO_Demo.py  main.py  pyproject.toml
data/: get_data_loader.py  imdb.py
dataloader/: get_data_loader.py
eval/: pipeline.py
