[project]
name = "llama-rlhf"
version = "0.1.0"
description = ""
authors = [
    {name = "Linghua Zhang",email = "lz101@rice.edu"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "transformers == 4.47.1",
    "numpy (==1.26.4)",
    "torch (>=2.5.1,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "peft (>=0.14.0,<0.15.0)",
    "trl (>=0.13.0,<0.14.0)",
    "wandb (>=0.19.4,<0.20.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "huggingface-hub (>=0.27.1,<0.28.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
